# VulkanStuff

./: .gitignore  CMakeLists.txt  README.md
Shaders/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
base/: base.cpp  base.h  device.cpp  device.h  swapchain.cpp  swapchain.h
shaders/: cull.comp.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
src/: main.cpp  mesh.cpp  mesh.h
tools/: camera.cpp  camera.h  debug.h  gltfLoader.cpp  gltfLoader.h  inits.h  types.h  utils.cpp  utils.h
